week10/httpserver.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpserver
  namespace: default
  annotations:
    deployment.kubernetes.io/revision: '2'
    description: ''
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpserver
      version: v1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpserver
        version: v1
      annotations:
        metrics.alpha.kubernetes.io/custom-endpoints: '[{"api":"","path":"","port":"","names":""}]'
    spec:
      containers:
        - name: container-0
          image: 'lanjing99/go-httpserver:0.4'
          env :
            - name : LOG_LEVEL
              valueFrom :
                configMapKeyRef :
                  name : myconfig
                  key : LOG_LEVEL
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 32000
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: default-secret
      affinity: {}
      schedulerName: default-scheduler
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 300
      dnsConfig:
        options:
          - name: timeout
            value: ''
          - name: ndots
            value: '5'
          - name: single-request-reopen
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
